# commuter-rail-summaries

./: .gitignore  Makefile  README.md  generate.py  pyproject.toml
archives/20191003/: feed.pickle
archives/20191005/: feed.pickle
archives/20191008/: feed.pickle
archives/20191009/: feed.pickle
archives/20191010/: feed.pickle
archives/20191011/: feed.pickle
archives/20191014/: feed.pickle
archives/20191017/: feed.pickle
archives/20191024/: feed.pickle
archives/20191030/: feed.pickle
archives/20191114/: feed.pickle
archives/20191120/: feed.pickle
archives/20191123/: feed.pickle
archives/20191125/: feed.pickle
archives/20191126/: feed.pickle
archives/20191128/: feed.pickle
archives/20191203/: feed.pickle
archives/20191206/: feed.pickle
archives/20191209/: feed.pickle
archives/20191210/: feed.pickle
archives/20191211/: feed.pickle
archives/20191216/: feed.pickle
archives/20191220/: feed.pickle
archives/20191223/: feed.pickle
archives/20191226/: feed.pickle
archives/20200102/: feed.pickle
archives/20200109/: feed.pickle
archives/20200116/: feed.pickle
archives/20200123/: feed.pickle
archives/20200130/: feed.pickle
archives/20200206/: feed.pickle
archives/20200213/: feed.pickle
archives/20200217/: feed.pickle
archives/20200220/: feed.pickle
archives/20200227/: feed.pickle
archives/20200302/: feed.pickle
archives/20200305/: feed.pickle
archives/20200309/: feed.pickle
gtfs/: archive.py  config.py  loader.py  models.py  network.py  service_levels.py  summarize.py  time.py  util.py
(+257 files in other folders)
