[tool.poetry]
name = "cr-schedule-history"
version = "0.1.0"
description = ""
authors = ["Ian Reynolds <ireynolds@transitmatters.info>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
